implemented docker and redis for cache